--- a/ENNApp/templates/ENNApp/detail.html
+++ b/ENNApp/templates/ENNApp/detail.html
@@ -1,14 +1,32 @@
-<h1>{{ question.question_text }}</h1>
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+<!DOCTYPE html>
+<html>
+    <head>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+            {% csrf_token %}
+            <script type="text/javascript">
+            // using jQuery
+            var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+            </script>
+            
+    </head>
+<body>
 
-<form action="" method="post">
-{% csrf_token %}
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-{% endfor %}
-<input type="submit" value="Vote">
-</form>
+    <h1>{{ question.question_text }}</h1>
 
-<a href="{% url 'vistaPrueba' question.id %}">Link!</a>
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    
+    <form action="" method="post">
+    {% csrf_token %}
+    {% for choice in question.choice_set.all %}
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+    {% endfor %}
+    <input type="submit" value="Vote">
+    </form>
+    
+    <a href="{% url 'vistaPrueba' question.id %}">Link!</a>
+    
+    
+</body>
+</html>
