--- a/ENNApp/templates/ENNApp/index.html
+++ b/ENNApp/templates/ENNApp/index.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html>
-    <head>
-    </head>
-<body>
+{% extends './baseTemplate.html' %}
 
-<h2>Modal Login Form {{number}}</h2>
+{% block mainBlock %} 
 
-<div id="id01" class="modal">
-  
-  <form class=" animate" action="/action_page.php">
+    <form class=" animate" action="/action_page.php">
+        <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <br> 
+        <input type="text" placeholder="Enter Username" name="uname" required>
+        <br><br>   
+        <label for="psw"><b>Password</b></label>
+        <br> 
+        <input type="password" placeholder="Enter Password" name="psw" required>
+        <br><br>   
+        <button type="submit">Login</button>
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        </div>
+    </form>
 
-
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <br> 
-      <input type="text" placeholder="Enter Username" name="uname" required>
-      <br><br>   
-      <label for="psw"><b>Password</b></label>
-      <br> 
-      <input type="password" placeholder="Enter Password" name="psw" required>
-      <br><br>   
-      <button type="submit">Login</button>
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-    </div>
-  </form>
-</div>
-
-
-</body>
-</html>
+{% endblock %}
