--- a/ENNApp/templates/ENNApp/baseTemplate.html
+++ b/ENNApp/templates/ENNApp/baseTemplate.html
@@ -140,6 +140,16 @@
             <i class="fas fa-fw fa-table"></i>
             <span>Tables</span></a>
         </li>
+        <!--Custom-->
+        {% if user.is_superuser %}
+        <li class="nav-item">
+            <a class="nav-link" href="/admin">
+              <i class="fas fa-users"></i>
+              <span>Manage Users</span>
+            </a>
+        </li>
+        {% endif %}
+        <!--End Custom-->
       </ul>
   
       <div id="content-wrapper">
