--- a/ENNApp/templates/register.html
+++ b/ENNApp/templates/register.html
@@ -34,6 +34,13 @@
                   <i class="fa fa-times-circle"></i>
                   <strong> </strong><span>The email address must be valid and the passwords must be the same</span>
               </div>
+              {% if registerError %}
+              <div id="loginError" class="alert alert-dismissible alert-danger">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
+                  <i class="fa fa-times-circle"></i>
+                  <strong> </strong><span>The user already exists</span>
+              </div>
+              {% endif %}
             <div class="form-label-group">
               <input name="username" type="text" id="inputUserName" class="form-control" placeholder="User Name" required="required" autofocus="autofocus">
               <label for="inputUserName">User</label>
@@ -41,7 +48,7 @@
           </div>
           <div class="form-group">
                 <div class="form-label-group">
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
+                    <input type="email" id="inputEmail" name="userEmail" class="form-control" placeholder="Email address" required="required">
                     <label for="inputEmail">Email address</label>
                 </div>
           </div>
