--- a/ENNApp/templates/ENNApp/upload.html
+++ b/ENNApp/templates/ENNApp/upload.html
@@ -13,6 +13,8 @@
     </form>
 
     <button id="submitUploadDataset" type="button" class="btn btn-primary">Upload</button>
+    <button type="button"  onclick="location.href='{% url 'listDatasets' %}';" class="btn btn-primary centerButtom">Go Back</button>
+
            
      
 
