--- a/ENNApp/templates/ENNApp/listDataset.html
+++ b/ENNApp/templates/ENNApp/listDataset.html
@@ -11,28 +11,37 @@
           DataSets List</div>
         <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-bordered dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered dataSetTable" width="100%" cellspacing="0">
               <thead>
                 <tr>
-                  <th>Name</th>
-                  <th>Creation Date</th>
-                  <th>Size</th>
-                  <th></th>
+                    <th>Name</th>
+                    {% if user.is_superuser %}
+                        <th>Owner </th>
+                    {% endif %}
+                    <th>Creation Date</th>
+                    <th>Size</th>
+                    <th></th>
 
                 </tr>
               </thead>
               <tfoot>
                 <tr>
-                  <th>Name</th>
-                  <th>Creation Date</th>
-                  <th>Size</th>
-                  <th></th>
+                    <th>Name</th>
+                    {% if user.is_superuser %}
+                        <th>Owner </th>
+                    {% endif %}
+                    <th>Creation Date</th>
+                    <th>Size</th>
+                    <th></th>
                 </tr>
               </tfoot>
               <tbody>
                 {% for dataset in datasets %}
                     <tr>
                         <td>{{ dataset.name }}</td>
+                        {% if user.is_superuser %}
+                            <th>{{ dataset.userOwner | capfirst }} </th>
+                        {% endif %}
                         <td>{{ dataset.creationDate }}</td>
                         <td>{{ dataset.size }}</td>
                         <td>
