--- a/ENNApp/templates/register.html
+++ b/ENNApp/templates/register.html
@@ -18,6 +18,7 @@
     <script type="text/javascript">
     // using jQuery
     var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+    var isAdmin = false;
     </script>
     {% block header %} {% endblock %}
 </head>
