--- a/ENNApp/templates/ENNApp/listNeuralNetworks.html
+++ b/ENNApp/templates/ENNApp/listNeuralNetworks.html
@@ -8,10 +8,10 @@
      <div class="card mb-3">
         <div class="card-header">
           <i class="fas fa-table"></i>
-          DataSets List</div>
+          Neural Networks List</div>
         <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-bordered dataSetTable" width="100%" cellspacing="0">
+            <table class="table table-bordered neuralNetworkTable" width="100%" cellspacing="0">
               <thead>
                 <tr>
                     <th>Name</th>
@@ -36,22 +36,22 @@
                 </tr>
               </tfoot>
               <tbody>
-                {% for dataset in datasets %}
+                {% for neuralNetwork in neuralNetworks %}
                     <tr>
-                        <td>{{ dataset.name }}</td>
+                        <td>{{ neuralNetwork.name }}</td>
                         {% if user.is_superuser %}
-                            <th>{{ dataset.userOwner | capfirst }} </th>
+                            <th>{{ neuralNetwork.userOwner | capfirst }} </th>
                         {% endif %}
-                        <td>{{ dataset.creationDate }}</td>
-                        <td>{{ dataset.size }}</td>
+                        <td>{{ neuralNetwork.creationDate }}</td>
+                        <td>{{ neuralNetwork.size }}</td>
                         <td>
                             <form class="form-inline" >
                                 <div class="buttomGroup form-group">
-                                    {% if dataset.userOwner == user.username %}
+                                    {% if neuralNetwork.userOwner == user.username %}
                                     <i class="editbuttom fas fa-edit"></i>
                                     {% endif %}
-                                    <i onclick="location.href='{{ dataset.url }}';" class="downloadbuttom fas fa-file-download"></i>
-                                    <i class="deletebuttom far fa-trash-alt" data-toggle="modal" data-target="#DeleteMessageModal" data-url="{{ dataset.deleteUrl }}"></i>
+                                    <i onclick="location.href='{{ neuralNetwork.url }}';" class="downloadbuttom fas fa-file-download"></i>
+                                    <i class="deletebuttom far fa-trash-alt" data-toggle="modal" data-target="#DeleteMessageModal" data-url="{{ neuralNetwork.deleteUrl }}"></i>
                                 </div>
                             </form>
                         </td>  
@@ -61,7 +61,7 @@
             </table>
           </div>
           <br>
-          <button type="button" id="gotoUploadViewButtom" onclick="location.href='{% url 'uploadView' %}';" class="btn btn-primary centerButtom">Add New DataSet</button>
+          <button type="button" id="gotoUploadViewButtom" onclick="location.href='{% url 'uploadView' %}';" class="btn btn-primary centerButtom">Add New neuralNetwork (TODO)</button>
         </div>
         <div class="card-footer small text-muted"></div>
 
@@ -78,7 +78,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Do you really want to delete these dataset? This process cannot be undone.</p>
+                        <p>Do you really want to delete these Neural Network? This process cannot be undone.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
