--- a/ENNApp/static/css/main.css
+++ b/ENNApp/static/css/main.css
@@ -42,6 +42,28 @@
     display: block;
 }
 
+.centerDiv{
+    text-align:center;
+}
+
+.centerMax {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    min-width: 600px;
+  }
+
+.divStepButtons{
+    text-align:center;
+    margin-top:10px;
+}
+
+.stepCircleIndicator{
+    text-align:center;
+    margin-top:20px;
+}
+
 .buttomGroup{
     padding: 10px;
     font-size: 20px;
@@ -90,3 +112,39 @@
 .msjCorrect strong,span{
     font-size:18px;
 }
+
+
+.customDisable{
+    color: #d0d0d0;
+}
+
+
+/***
+Step Form
+**/
+
+
+  /* Hide all steps by default: */
+  .tab {
+    display: none;
+  }
+  /* Make circles that indicate the steps of the form: */
+  .step {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb;
+    border: none;  
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.5;
+  }
+  
+  .step.active {
+    opacity: 1;
+  }
+  
+  /* Mark the steps that are finished and valid: */
+  .step.finish {
+    background-color: #4CAF50;
+  }
