--- a/ENNApp/templates/ENNApp/baseTemplate.html
+++ b/ENNApp/templates/ENNApp/baseTemplate.html
@@ -25,63 +25,11 @@
     </script>
     {% block header %} {% endblock %}
 </head>
-<!--
-<body>
-    
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarColor02">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </div>
-    
-    <br>
-
-    <div id="msjErr" class="alert alert-dismissible alert-danger" style="display: none;">
-        <i class="fa fa-times-circle"></i>
-        <strong id="errorBoldText"></strong> <span id="errorText"></span>
-    </div>
-
-    <div id="msjCorrect" class="alert alert-dismissible alert-success" style="display: none;">
-        <i class="fa fa-check-circle"></i>
-        <strong id="correctBoldText"></strong> <span id="correctText"></span>
-    </div>
-
-    <div class="mainBlock">
-    </div>
-    
-    <script src="{% static 'js/main.js' %}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</body>
--->
 <body id="page-top">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
   
-      <a class="navbar-brand mr-1" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand mr-1" style="font-size: 1.15rem;" href="{% url 'index' %}">Easy Neural Network</a>
   
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -91,7 +39,7 @@
       <div id="userNameLabel" class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
         <div>
             {% if user.is_authenticated %}
-            <span>Hi {{ user.username | capfirst}}</span> 
+            <span>Welcome {{ user.username | capfirst}}</span> 
           {% else %}
           <a href="{% url 'login' %}">You are not logged in</a>
           {% endif %}
@@ -259,6 +207,7 @@
   
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/template.js' %}"></script>
+    <script src="{% static 'js/stepForm.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
   
   </body>
