--- a/ENNApp/templates/ENNApp/baseTemplate.html
+++ b/ENNApp/templates/ENNApp/baseTemplate.html
@@ -208,6 +208,7 @@
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/template.js' %}"></script>
     <script src="{% static 'js/stepForm.js' %}"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     <script src="{% static 'js/main.js' %}"></script>
   
   </body>
