Add Replace missing values Functionality

--- a/ENNApp/static/css/main.css
+++ b/ENNApp/static/css/main.css
@@ -118,6 +118,21 @@
     color: #d0d0d0;
 }
 
+.msjWarning{
+    font-size:20px;
+}
+
+.msjWarning i{
+    color:#ffA000;
+}
+
+.crossLine{
+    text-decoration:line-through;
+}
+
+#newFileName{
+    width: 400px;
+}
 
 /***
 Step Form
